--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "knex": "^3.1.0",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0"
   },
